# Persistent-Memory-Study

./: .gitignore  .gitmodules  README.md  run.py
case_study/: CMakeLists.txt  README.md  global.hpp  kv_wrap.hpp  main.cpp  path.cmake  path.cmake.template  pmm_stat.txt  shell_run.sh  tests.hpp  tmp_dump.hpp
case_study/external_repo/cceh/CCEH-PMDK/: CMakeLists.txt  Makefile  wrap.cpp
case_study/external_repo/cceh/CCEH-PMDK/src/: CCEH.cpp  CCEH.h  util.h
case_study/external_repo/cceh/src/: CCEH.h
case_study/external_repo/fastfair/: CMakeLists.txt  fastfair.h  persist.h  pmm_stat.txt  wrap.cpp
case_study/include/: cceh_pmdk.hpp  fastfair.hpp
case_study/src/stl_example/: stl_hashtable.cpp  stl_hashtable.hpp
micro_benchmarks/: CMakeLists.txt  README.md  REAME.md  compiling_config.cmake  compiling_config.cmake.template  cpu_data_structure.txt  generate_cpu_info.sh  global.h  shell_run.sh
micro_benchmarks/cases/: common.h  flush.h  generate_ops.sh  lat.cpp  main.cpp  op_1024.h  op_128.h  op_256.h  op_512.h  op_64.h  op_flush.h  ops.h  ops_16_16.h  prefetching.cpp  prefetching_work_case.h  rd_wr_lat.cpp  read_after_flush.cpp  read_and_write_bw.cpp  read_buf_amp.cpp  read_buf_case_0.cpp  seperate_rd_wr_buf.cpp  work.json  work.json.template  write_buffer.cpp
micro_benchmarks/read_amp/: common.h  main.cpp
micro_benchmarks/results/: log_parser.py  task0.json  task1.json
micro_benchmarks/throughput/: common.h  experiment_sets.cpp  genereate_ops.sh  main.cpp  op_128B.h  op_2048B.h  op_256B.h  op_4096B.h  op_4_128.h  op_512B.h  op_64B.h
temporary_code/: new_test.py
tools/: case_study_config0.json  case_study_config1.json  case_study_config2.json  case_study_config3.json  case_study_config4.json  case_study_config5.json  format_log.py  generate_workload.py  microbench_config1.json  microbench_config2.json  microbench_config5_0.json  microbench_config5_1.json  microbench_config6.json  plot_bench_lat.py  plot_bench_prefetching.py  plot_bench_rd_amp.py  plot_bench_read_after_persist.py  plot_bench_wr_buf.py  plot_case_btree.py  plot_case_cceh.py  plot_cceh.py  ycsb_workload
